fixed files to be good for java 16